--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1869,13 +1869,13 @@ layers:
             filter:
                 $zoom: { max: 18 }
                 any:
-                    # show footprints for buildings one zoom level before they will be extruded
+                    # show footprints for buildings at least one zoom level before they will be extruded
+                    - { $zoom: { min: 17 } }
                     - { $zoom: { min: 14 }, height: { min: 190 } }
                     - { $zoom: { min: 14 }, area: { min: 5000 } }
                     - { $zoom: { min: 15 }, height: { min: 100 } }
-                    - { $zoom: { min: 15 }, area: { min: 3500 } }
-                    - { $zoom: { min: 16 }, area: { min: 500 } }
-                    - { $zoom: { min: 17 } }
+                    - { $zoom: { min: 15 }, area: { min: 500 } }
+                    - { $zoom: { min: 16 }, area: { min: 100 } }
             draw:
                 polygons:
                     visible: true
@@ -1925,16 +1925,16 @@ layers:
     #            draw:
     #                polygons:
     #                    color: orange
+    
         extrude:
             filter:
                 any:
-                    # same rules as above, but +1 zoom level
+                    - { $zoom: { min: 18 } }
                     - { $zoom: { min: 15 }, height: { min: 190 } }
                     - { $zoom: { min: 15 }, area: { min: 5000 } }
                     - { $zoom: { min: 16 }, height: { min: 100 } }
                     - { $zoom: { min: 16 }, area: { min: 3500 } }
                     - { $zoom: { min: 17 }, area: { min: 500 } }
-                    - { $zoom: { min: 18 } }
             draw:
                 polygons:
                     visible: true
