--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -735,7 +735,30 @@ styles:
                 color: |
                     color.rgb = mix(color.rgb, BACKGROUND,TileDotsDF(35.,.21));
 
-    building_scale:
+    # HSV/RGB functions
+    hsv:
+        shaders:
+            blocks:
+                global: |
+                    vec3 rgb2hsv(vec3 c)
+                    {
+                        vec4 K = vec4(0.0, -1.0 / 3.0, 2.0 / 3.0, -1.0);
+                        vec4 p = mix(vec4(c.bg, K.wz), vec4(c.gb, K.xy), step(c.b, c.g));
+                        vec4 q = mix(vec4(p.xyw, c.r), vec4(c.r, p.yzx), step(p.x, c.r));
+
+                        float d = q.x - min(q.w, q.y);
+                        float e = 1.0e-10;
+                        return vec3(abs(q.z + (q.w - q.y) / (6.0 * d + e)), d / (q.x + e), q.x);
+                    }
+
+                    vec3 hsv2rgb(vec3 c)
+                    {
+                        vec4 K = vec4(1.0, 2.0 / 3.0, 1.0 / 3.0, 3.0);
+                        vec3 p = abs(fract(c.xxx + K.xyz) * 6.0 - K.www);
+                        return c.z * mix(K.xxx, clamp(p - K.xxx, 0.0, 1.0), c.y);
+                    }
+
+    scale-buildings:
         shaders:
             blocks:
                 position: |
@@ -748,59 +771,66 @@ styles:
                     float e = (zoom - midpoint)/(speed * .2);
                     position.z *= ((1.-min) / (1.+(exp(e)))) + min;
 
-    buildings_grid:
+    building-grid:
         base: polygons
-        mix: building_scale
+        mix: [hsv, scale-buildings]
         texcoords: true
         shaders:
             defines:
-                ROOF_COLOR: vec3(.870, .870, .870)
-                WALL_COLOR: vec3(0.658, 0.617, 0.576)
+                # ROOF_COLOR: vec3(.870, .870, .870)
+                # WALL_COLOR: vec3(0.658, 0.617, 0.576)
+                WALL_FACTOR: vec3(1., 3., .8) # modifies roof color HSV
+                GRID_COLOR: vec3(0.25)
             blocks:
                 color: |
-                   if ( dot(vec3(0.,0.,1.),normal) == 1.0 ) {
-                        // If it's a roof
-                        color.rgb = ROOF_COLOR;
-                    } else {
+                   if (dot(vec3(0.,0.,1.) ,normal) < 1.0) {
                         // If it's a wall
                         vec2 st = v_texcoord.xy;
                         vec2 f_st = fract(st*10.);
-                    
-                        vec2 pct = step(vec2(0.09),f_st);;
-                        color.rgb = mix(WALL_COLOR, vec3(0.35),(1.0-(pct.x * pct.y)));
+                        vec2 pct = step(vec2(0.09),f_st);
+                        
+                        vec3 wall = hsv2rgb(
+                            rgb2hsv(color.rgb) * 
+                            WALL_FACTOR //* 
+                            //vec3(1., color.a, color.a)
+                        );
+                        // vec3 wall = hsv2rgb(rgb2hsv(ROOF_COLOR) * WALL_FACTOR);
+                        color.rgb = mix(wall, GRID_COLOR, (1.0-(pct.x * pct.y)));
+                        //color.a = 1.;
+                        // color.rgb = mix(ROOF_COLOR * WALL_FACTOR, GRID_COLOR,(1.0-(pct.x * pct.y)));
                     }
 
-    buildings_grid-univ:
-        mix: buildings_grid
-        shaders:
-            defines:
-                ROOF_COLOR: vec3(0.922,0.894,0.862)
-                WALL_COLOR: vec3(0.658,0.617,0.576)
+    # building-grid-univ:
+    #     mix: building-grid
+    #     shaders:
+    #         defines:
+    #             ROOF_COLOR: vec3(0.922,0.894,0.862)
+    #             WALL_COLOR: vec3(0.658,0.617,0.576)
  
-    buildings_grid-parks:
-        mix: buildings_grid
-        shaders:
-            defines:
-                ROOF_COLOR: vec3(0.847,0.886,0.882)
-                WALL_COLOR: vec3(0.627,0.722,0.718)
+    # building-grid-parks:
+    #     mix: building-grid
+    #     shaders:
+    #         defines:
+    #             ROOF_COLOR: vec3(0.847,0.886,0.882)
+    #             WALL_COLOR: vec3(0.627,0.722,0.718)
 
-    buildings_grid-hospital:
-        mix: buildings_grid
-        shaders:
-            defines:
-                ROOF_COLOR: vec3(0.941,0.894,0.898)
-                WALL_COLOR: vec3(0.692,0.575,0.586)
+    # building-grid-hospital:
+    #     mix: building-grid
+    #     shaders:
+    #         defines:
+    #             ROOF_COLOR: vec3(0.941,0.894,0.898)
+    #             WALL_COLOR: vec3(0.692,0.575,0.586)
 
-    buildings_grid-retail:
-        mix: buildings_grid
-        shaders:
-            defines:
-                ROOF_COLOR: vec3(0.945,0.898,0.878)
-                WALL_COLOR: vec3(0.725,0.694,0.678)
+    # building-grid-retail:
+    #     mix: building-grid
+    #     shaders:
+    #         defines:
+    #             ROOF_COLOR: vec3(0.945,0.898,0.878)
+    #             WALL_COLOR: vec3(0.725,0.694,0.678)
 
-    buildings_lines:
+    building-lines:
         base: lines
-        mix: building_scale
+        mix: scale-buildings
         texcoords: true
 
     icons:
@@ -1856,8 +1886,8 @@ layers:
                 visible: false
                 style: lines
                 order: 51
-                color: [0.600, 0.600, 0.600]
-                width: [[14,0.6px], [15,0.65px], [16,1px], [18,1.25px]]
+                color: [0.6, 0.6, 0.6]
+                width: [[14, 0.6px], [15, 0.65px], [16, 1px], [18, 1.25px]]
 
         # turn interactive feature selection on for buildings with names
         interactive:
@@ -1881,50 +1911,6 @@ layers:
                     visible: true
                 lines:
                     visible: true
-
-            # landuse-specific rules
-            in_park:
-                filter: { landuse_kind: [park,forest,nature_reserve,conservation,golf_course,garden] }
-                draw:
-                    polygons:
-                        color: *building2
-                    lines:
-                        color: [0.600, 0.600, 0.600]
-                golf_course:
-                    filter: { landuse_kind: golf_course }
-                    draw:
-                        lines:
-                            color: [0.600, 0.600, 0.600]
-                nature_reserve:
-                    filter: { landuse_kind: nature_reserve }
-                    draw:
-                        lines:
-                            color: [0.600, 0.600, 0.600]
-                conservation:
-                    filter: { landuse_kind: conservation }
-                    draw:
-                        lines:
-                            color: [0.600, 0.600, 0.600]
-                zoo:
-                    filter: { landuse_kind: zoo }
-                    draw:
-                        lines:
-                            color: [0.600, 0.600, 0.600]
-            in_university:
-                filter: { landuse_kind: [university,school] }
-                draw:
-                    polygons:
-                        color: *building2
-            in_hospital:
-                filter: { landuse_kind: hospital }
-                draw:
-                    polygons:
-                        color: *building2
-    #        in_retail:
-    #            filter: { landuse_kind: retail }
-    #            draw:
-    #                polygons:
-    #                    color: orange
     
         extrude:
             filter:
@@ -1938,38 +1924,57 @@ layers:
             draw:
                 polygons:
                     visible: true
-                    style: buildings_grid
+                    style: building-grid
                     extrude: true
-                    color: [.65, .65, .65]
+                    color: [.870, .870, .870]
                 lines:
                     visible: true
-                    style: buildings_lines
+                    style: building-lines
                     extrude: true
 
-            # landuse-specific rules
-            in_park:
-                filter: { landuse_kind: [park,forest,nature_reserve,conservation,golf_course,garden] }
-                draw:
-                    polygons:
-                        style: buildings_grid-parks
-            in_university:
-                filter: { landuse_kind: [university,school] }
-                draw:
-                    polygons:
-                        order: 52
-                        style: buildings_grid-univ
-                        # color: red
-            in_hospital:
-                filter: { landuse_kind: hospital }
-                draw:
-                    polygons:
-                        style: buildings_grid-hospital
-            in_retail:
-                filter: { landuse_kind: retail }
-                draw:
-                    polygons:
-                        style: buildings_grid-retail
+        # landuse-specific rules
+        in_park:
+            filter: { landuse_kind: [park,forest,nature_reserve,conservation,golf_course,garden] }
+            draw:
+                polygons:
+                    color: [0.847,0.886,0.882]
 
+            # golf_course:
+            #     filter: { landuse_kind: golf_course }
+            #     draw:
+            #         polygons:
+            #             color: *building2
+            # nature_reserve:
+            #     filter: { landuse_kind: nature_reserve }
+            #     draw:
+            #         polygons:
+            #             color: *building2
+            # conservation:
+            #     filter: { landuse_kind: conservation }
+            #     draw:
+            #         polygons:
+            #             color: *building2
+            # zoo:
+            #     filter: { landuse_kind: zoo }
+            #     draw:
+            #         polygons:
+            #             color: *building2
+        in_university:
+            filter: { landuse_kind: [university,school] }
+            draw:
+                polygons:
+                    color: [0.922, 0.894, 0.862]
+        in_hospital:
+            filter: { landuse_kind: hospital }
+            draw:
+                polygons:
+                    color: [0.941, 0.894, 0.898]
+        in_retail:
+           filter: { landuse_kind: retail }
+           draw:
+                polygons:
+                    color: [0.945, 0.898, 0.878]
+                        
     boundaries:
         data: { source: osm, layer: boundaries }
         # country subdivisions (states, provinces)
