--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -121,191 +121,192 @@ textures:
             airport: [180, 36, 36, 36]
             animal-shelter: [432, 0, 36, 36]
             antique-shop: [216, 108, 36, 36]
-            aquarium: [684, 252, 36, 36]
-            arcade: [576, 252, 36, 36]
-            art-gallery: [540, 252, 36, 36]
+            aquarium: [720, 252, 36, 36]
+            arcade: [612, 252, 36, 36]
+            art-gallery: [576, 252, 36, 36]
             arts-crafts: [180, 108, 36, 36]
-            athletics-sports: [288, 216, 36, 36]
-            atm: [36, 216, 36, 36]
-            automotive-shop: [108, 216, 36, 36]
-            bagel-shop: [468, 288, 36, 36]
-            bakery: [144, 252, 36, 36]
-            bank: [72, 216, 36, 36]
-            bar: [468, 216, 36, 36]
+            athletics-sports: [324, 216, 36, 36]
+            atm: [72, 216, 36, 36]
+            automotive-shop: [144, 216, 36, 36]
+            bagel-shop: [504, 288, 36, 36]
+            bakery: [180, 252, 36, 36]
+            bank: [108, 216, 36, 36]
+            bar: [504, 216, 36, 36]
             baseball-field: [72, 144, 36, 36]
             basketball-court: [36, 144, 36, 36]
-            basketball-stadium: [360, 252, 36, 36]
+            basketball-stadium: [396, 252, 36, 36]
             bathroom: [216, 144, 36, 36]
             battlefield: [360, 144, 36, 36]
-            bbq: [36, 288, 36, 36]
+            bbq: [72, 288, 36, 36]
             beach: [288, 144, 36, 36]
             beach-resort: [252, 144, 36, 36]
-            beer-garden: [576, 288, 36, 36]
+            beer-garden: [612, 288, 36, 36]
             bench: [756, 0, 36, 36]
-            bicycle-parking: [648, 180, 36, 36]
-            bike-shop: [0, 216, 36, 36]
+            bicycle-parking: [684, 180, 36, 36]
+            bike-shop: [36, 216, 36, 36]
             boat-ferry: [144, 36, 36, 36]
             boat-ramp: [360, 108, 36, 36]
-            bookstore: [937, 180, 36, 36]
-            bowling-alley: [504, 252, 36, 36]
-            breakfast: [108, 288, 36, 36]
+            bookstore: [0, 216, 36, 36]
+            bowling-alley: [540, 252, 36, 36]
+            breakfast: [144, 288, 36, 36]
             bridal-shop: [144, 72, 36, 36]
-            bridge: [540, 144, 36, 36]
-            building: [684, 216, 36, 36]
-            burger: [360, 288, 36, 36]
+            bridge: [576, 144, 36, 36]
+            buddhism: [504, 144, 36, 36]
+            building: [720, 216, 36, 36]
+            burger: [396, 288, 36, 36]
             bus-station: [72, 36, 36, 36]
             butcher: [900, 72, 36, 36]
-            camera-store: [901, 180, 36, 36]
-            campground: [504, 144, 36, 36]
-            candy-store: [180, 288, 36, 36]
-            capital-l: [841, 288, 23, 23]
-            capital-m: [822, 288, 18, 18]
-            capital-s: [806, 288, 17, 17]
-            capital-xl: [863, 288, 25, 25]
-            capital-xs: [792, 288, 13, 13]
-            car-dealership: [864, 180, 36, 36]
-            car-wash: [828, 180, 36, 36]
-            carribean-restaurant: [36, 252, 36, 36]
-            casino: [468, 252, 36, 36]
+            camera-store: [937, 180, 36, 36]
+            campground: [540, 144, 36, 36]
+            candy-store: [216, 288, 36, 36]
+            capital-l: [877, 288, 23, 23]
+            capital-m: [858, 288, 18, 18]
+            capital-s: [842, 288, 17, 17]
+            capital-xl: [900, 288, 25, 25]
+            capital-xs: [828, 288, 13, 13]
+            car-dealership: [901, 180, 36, 36]
+            car-wash: [864, 180, 36, 36]
+            carribean-restaurant: [72, 252, 36, 36]
+            casino: [504, 252, 36, 36]
             castle: [180, 72, 36, 36]
             cemetery: [468, 144, 36, 36]
-            cheese-shop: [144, 288, 36, 36]
-            chinese-restaurant: [72, 252, 36, 36]
-            church: [72, 180, 36, 36]
+            cheese-shop: [180, 288, 36, 36]
+            chinese-restaurant: [108, 252, 36, 36]
+            church: [108, 180, 36, 36]
             city: [756, 108, 36, 36]
             clinic: [216, 0, 36, 36]
-            clothing-store: [756, 252, 36, 36]
-            cocktail-bar: [432, 216, 36, 36]
-            coffee-shop: [108, 252, 36, 36]
-            college-university: [864, 252, 36, 36]
-            comedy-club: [432, 252, 36, 36]
-            concert-hall: [396, 252, 36, 36]
+            clothing-store: [792, 252, 36, 36]
+            cocktail-bar: [468, 216, 36, 36]
+            coffee-shop: [144, 252, 36, 36]
+            college-university: [901, 252, 36, 36]
+            comedy-club: [468, 252, 36, 36]
+            concert-hall: [432, 252, 36, 36]
             convenience-store: [108, 108, 36, 36]
             cosmetics-shop: [72, 108, 36, 36]
             courthouse: [396, 0, 36, 36]
-            credit-union: [792, 180, 36, 36]
-            cupcake-shop: [937, 216, 36, 36]
+            credit-union: [828, 180, 36, 36]
+            cupcake-shop: [0, 252, 36, 36]
             daycare: [36, 108, 36, 36]
             dentist: [252, 0, 36, 36]
-            department-store: [756, 180, 36, 36]
+            department-store: [792, 180, 36, 36]
             design-studio: [108, 72, 36, 36]
             dessert: [36, 0, 36, 36]
-            dog-run: [216, 216, 36, 36]
-            donut: [252, 288, 36, 36]
-            electronics-store: [612, 180, 36, 36]
-            ev-charging-station: [720, 180, 36, 36]
-            factory: [648, 216, 36, 36]
+            dog-run: [252, 216, 36, 36]
+            donut: [288, 288, 36, 36]
+            electronics-store: [648, 180, 36, 36]
+            ev-charging-station: [756, 180, 36, 36]
+            factory: [684, 216, 36, 36]
             farm: [432, 144, 36, 36]
-            farmers-market: [540, 180, 36, 36]
+            farmers-market: [576, 180, 36, 36]
             field: [396, 144, 36, 36]
-            financial-service: [576, 180, 36, 36]
+            financial-service: [612, 180, 36, 36]
             fire-station: [360, 0, 36, 36]
-            fish-market: [504, 180, 36, 36]
-            fishing-spot: [648, 252, 36, 36]
+            fish-market: [540, 180, 36, 36]
+            fishing-spot: [684, 252, 36, 36]
             fitness: [792, 72, 36, 36]
             flea-market: [937, 72, 36, 36]
-            flower-shop: [937, 144, 36, 36]
-            food-court: [468, 180, 36, 36]
+            flower-shop: [0, 180, 36, 36]
+            food-court: [504, 180, 36, 36]
             food-drink-shop: [864, 72, 36, 36]
-            football-stadium: [828, 252, 36, 36]
+            football-stadium: [864, 252, 36, 36]
             ford: [576, 0, 36, 36]
-            forest: [103, 324, 36, 36]
-            fountain: [144, 180, 36, 36]
-            fried-chicken-joint: [901, 216, 36, 36]
-            fun-fair: [612, 144, 36, 36]
-            furniture-store: [360, 180, 36, 36]
-            gaming-cafe: [864, 144, 36, 36]
+            forest: [130, 324, 36, 36]
+            fountain: [180, 180, 36, 36]
+            fried-chicken-joint: [937, 216, 36, 36]
+            fun-fair: [648, 144, 36, 36]
+            furniture-store: [396, 180, 36, 36]
+            gaming-cafe: [901, 144, 36, 36]
             garden: [324, 144, 36, 36]
             garden-center: [828, 72, 36, 36]
-            gas-station: [0, 288, 36, 36]
-            gastropub: [0, 252, 36, 36]
+            gas-station: [36, 288, 36, 36]
+            gastropub: [36, 252, 36, 36]
             gate: [684, 0, 36, 36]
-            gay-bar: [396, 216, 36, 36]
-            general-entertainment: [324, 252, 36, 36]
+            gay-bar: [432, 216, 36, 36]
+            general-entertainment: [360, 252, 36, 36]
             general-travel: [36, 36, 36, 36]
-            generic: [756, 288, 36, 36]
-            german-restaurant: [864, 216, 36, 36]
-            gift-shop: [828, 144, 36, 36]
+            generic: [792, 288, 36, 36]
+            german-restaurant: [901, 216, 36, 36]
+            gift-shop: [864, 144, 36, 36]
             golf-course: [0, 144, 36, 36]
-            gourmet-shop: [901, 144, 36, 36]
-            government-building: [252, 216, 36, 36]
-            grocery-store: [432, 180, 36, 36]
-            harbor-marina: [180, 216, 36, 36]
+            gourmet-shop: [937, 144, 36, 36]
+            government-building: [288, 216, 36, 36]
+            grocery-store: [468, 180, 36, 36]
+            harbor-marina: [216, 216, 36, 36]
             hardware-store: [756, 72, 36, 36]
             hiking-trail: [720, 108, 36, 36]
-            historic-site: [792, 144, 36, 36]
+            historic-site: [828, 144, 36, 36]
             hobby-shop: [684, 72, 36, 36]
             hockey-field: [937, 108, 36, 36]
             hospital: [180, 0, 36, 36]
-            hot-dog-joint: [612, 288, 36, 36]
-            hot-pot-restaurant: [216, 288, 36, 36]
+            hot-dog-joint: [648, 288, 36, 36]
+            hot-pot-restaurant: [252, 288, 36, 36]
             hot-spring: [252, 72, 36, 36]
             hotel: [0, 36, 36, 36]
             hunting-supply: [648, 72, 36, 36]
-            ice-cream-shop: [648, 288, 36, 36]
-            information: [720, 288, 36, 36]
+            ice-cream-shop: [684, 288, 36, 36]
+            information: [756, 288, 36, 36]
             internet-cafe: [612, 72, 36, 36]
             island: [684, 108, 36, 36]
             jewelry-store: [576, 72, 36, 36]
-            karaoke: [0, 180, 36, 36]
+            karaoke: [36, 180, 36, 36]
             lake: [648, 108, 36, 36]
             landmark: [324, 0, 36, 36]
             laundry: [540, 72, 36, 36]
             library: [0, 0, 36, 36]
             light-rail: [937, 0, 36, 36]
             lighthouse: [576, 108, 36, 36]
-            liquor-store: [396, 180, 36, 36]
-            lounge: [360, 216, 36, 36]
+            liquor-store: [432, 180, 36, 36]
+            lounge: [396, 216, 36, 36]
             mall: [504, 72, 36, 36]
             marijuana-dispensary: [468, 72, 36, 36]
             market: [432, 72, 36, 36]
-            medical-center: [576, 216, 36, 36]
+            medical-center: [612, 216, 36, 36]
             military-base: [180, 144, 36, 36]
             mine: [720, 72, 36, 36]
             miscellaneous-shop: [360, 72, 36, 36]
             mobile-phone-shop: [324, 72, 36, 36]
-            molecular-gastronomy: [324, 288, 36, 36]
+            molecular-gastronomy: [360, 288, 36, 36]
             mosque: [108, 0, 36, 36]
             motorcycle-shop: [72, 72, 36, 36]
             mountain: [540, 108, 36, 36]
-            movie-theatre: [720, 252, 36, 36]
+            movie-theatre: [756, 252, 36, 36]
             moving-target: [901, 0, 36, 36]
-            museum: [756, 144, 36, 36]
+            museum: [792, 144, 36, 36]
             music-store: [36, 72, 36, 36]
-            music-venue: [288, 252, 36, 36]
+            music-venue: [324, 252, 36, 36]
             nail-salon: [0, 72, 36, 36]
             neighborhood: [504, 108, 36, 36]
             newsstand: [937, 36, 36, 36]
-            nightlife: [180, 252, 36, 36]
-            noodle-shop: [432, 288, 36, 36]
+            nightlife: [216, 252, 36, 36]
+            noodle-shop: [468, 288, 36, 36]
             office: [144, 144, 36, 36]
             office-supplies: [864, 36, 36, 36]
             optical-shop: [900, 36, 36, 36]
             other-outdoors: [468, 108, 36, 36]
-            park: [108, 180, 36, 36]
-            parking: [684, 180, 36, 36]
-            performing-arts: [252, 252, 36, 36]
+            park: [144, 180, 36, 36]
+            parking: [720, 180, 36, 36]
+            performing-arts: [288, 252, 36, 36]
             pet-store: [828, 36, 36, 36]
             pharmacy: [0, 108, 36, 36]
             photography-lab: [792, 36, 36, 36]
             picnic-spot: [720, 0, 36, 36]
             pier: [864, 0, 36, 36]
-            pizza: [684, 288, 36, 36]
+            pizza: [720, 288, 36, 36]
             playground: [288, 72, 36, 36]
             police: [288, 0, 36, 36]
             pool: [432, 108, 36, 36]
-            pool-hall: [720, 144, 36, 36]
-            post-office: [540, 216, 36, 36]
-            power-pylon: [612, 216, 36, 36]
-            public-art: [216, 252, 36, 36]
-            racetrack: [684, 144, 36, 36]
-            ramen: [396, 288, 36, 36]
+            pool-hall: [756, 144, 36, 36]
+            post-office: [576, 216, 36, 36]
+            power-pylon: [648, 216, 36, 36]
+            public-art: [252, 252, 36, 36]
+            racetrack: [720, 144, 36, 36]
+            ramen: [432, 288, 36, 36]
             real-estate: [756, 36, 36, 36]
             record-shop: [720, 36, 36, 36]
             recycling-facility: [684, 36, 36, 36]
             rental-car: [828, 0, 36, 36]
             rest-area: [792, 0, 36, 36]
-            restaurant: [288, 288, 36, 36]
+            restaurant: [324, 288, 36, 36]
             river: [396, 108, 36, 36]
             road: [612, 0, 36, 36]
             ruin: [648, 0, 36, 36]
@@ -315,62 +316,62 @@ textures:
             shoe-store: [396, 72, 36, 36]
             skate-park: [900, 108, 36, 36]
             skating-rink: [864, 108, 36, 36]
-            ski-area: [180, 180, 36, 36]
+            ski-area: [216, 180, 36, 36]
             smoke-shop: [612, 36, 36, 36]
             soccer-field: [828, 108, 36, 36]
-            soccer-stadium: [792, 252, 36, 36]
-            soup-place: [828, 216, 36, 36]
+            soccer-stadium: [828, 252, 36, 36]
+            soup-place: [864, 216, 36, 36]
             spa-massage: [576, 36, 36, 36]
-            spiritual-center: [504, 216, 36, 36]
+            spiritual-center: [540, 216, 36, 36]
             sporting-goods-shop: [540, 36, 36, 36]
             spring: [612, 108, 36, 36]
             stable: [324, 108, 36, 36]
-            stadium: [288, 180, 36, 36]
-            steakhouse: [72, 288, 36, 36]
+            stadium: [324, 180, 36, 36]
+            steakhouse: [108, 288, 36, 36]
             storage-facility: [504, 36, 36, 36]
             subway: [540, 0, 36, 36]
             surf-shop: [144, 108, 36, 36]
-            sushi-restaurant: [36, 180, 36, 36]
-            swimming: [324, 180, 36, 36]
+            sushi-restaurant: [72, 180, 36, 36]
+            swimming: [360, 180, 36, 36]
             synagogue: [72, 0, 36, 36]
             tailor-shop: [468, 36, 36, 36]
             tanning-salon: [432, 36, 36, 36]
             tattoo-parlor: [396, 36, 36, 36]
             taxi: [504, 0, 36, 36]
-            tea-room: [792, 216, 36, 36]
-            tennis: [216, 180, 36, 36]
-            theme-park: [648, 144, 36, 36]
+            tea-room: [828, 216, 36, 36]
+            tennis: [252, 180, 36, 36]
+            theme-park: [684, 144, 36, 36]
             thrift-vintage-store: [360, 36, 36, 36]
-            toll-booth: [937, 252, 36, 36]
-            townspot-l: [52, 324, 23, 23]
-            townspot-l-rev: [940, 288, 23, 23]
-            townspot-m: [32, 324, 20, 20]
-            townspot-m-rev: [920, 288, 20, 20]
-            townspot-s: [13, 324, 18, 18]
-            townspot-s-rev: [902, 288, 18, 18]
-            townspot-xl: [75, 324, 28, 28]
-            townspot-xl-rev: [964, 288, 28, 28]
-            townspot-xs: [0, 324, 13, 13]
-            townspot-xs-rev: [889, 288, 13, 13]
+            toll-booth: [0, 288, 36, 36]
+            townspot-l: [79, 324, 23, 23]
+            townspot-l-rev: [976, 288, 23, 23]
+            townspot-m: [59, 324, 20, 20]
+            townspot-m-rev: [956, 288, 20, 20]
+            townspot-s: [41, 324, 18, 18]
+            townspot-s-rev: [938, 288, 18, 18]
+            townspot-xl: [103, 324, 28, 28]
+            townspot-xl-rev: [0, 324, 28, 28]
+            townspot-xs: [28, 324, 13, 13]
+            townspot-xs-rev: [925, 288, 13, 13]
             toy-game-store: [324, 36, 36, 36]
-            track: [252, 180, 36, 36]
-            traffic-signal: [901, 252, 36, 36]
+            track: [288, 180, 36, 36]
+            traffic-signal: [937, 252, 36, 36]
             train-station: [468, 0, 36, 36]
             travel-agency: [288, 36, 36, 36]
             veterinarian: [144, 0, 36, 36]
             video-game-store: [252, 36, 36, 36]
             video-store: [216, 36, 36, 36]
-            view-point: [612, 252, 36, 36]
-            vineyard: [144, 216, 36, 36]
+            view-point: [648, 252, 36, 36]
+            vineyard: [180, 216, 36, 36]
             volcano: [288, 108, 36, 36]
             volleyball-court: [792, 108, 36, 36]
             well: [216, 72, 36, 36]
-            whisky-bar: [324, 216, 36, 36]
-            wine-bar: [540, 288, 36, 36]
-            wine-shop: [504, 288, 36, 36]
-            winery: [756, 216, 36, 36]
-            wings-joint: [720, 216, 36, 36]
-            zoo: [576, 144, 36, 36]
+            whisky-bar: [360, 216, 36, 36]
+            wine-bar: [576, 288, 36, 36]
+            wine-shop: [540, 288, 36, 36]
+            winery: [792, 216, 36, 36]
+            wings-joint: [756, 216, 36, 36]
+            zoo: [612, 144, 36, 36]
 
 sources:
     osm:
@@ -3059,6 +3060,9 @@ layers:
             church:
                 filter: { kind: place_of_worship, religion: christian }
                 draw: { icons: { sprite: church }}
+            buddhist:
+                filter: { kind: place_of_worship, religion: buddhist }
+                draw: { icons: { sprite: buddhism }}
             synagogue:
                 filter: { kind: place_of_worship, religion: jewish }
                 draw: { icons: { sprite: synagogue }}
