--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -408,9 +408,9 @@ sources:
     osm:
         # EraserMaps the app only supports MVT format tiles
         type: MVT
-        #url:   //vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
+        url:   //vector.dev.mapzen.com/osm/all/{z}/{x}/{y}.mvt
         #url:  //localhost:8080//osm/all/{z}/{x}/{y}.mvt
-        url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-HqUVidw
+        #url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.mvt?api_key=vector-tiles-HqUVidw
 
 cameras:
     isometric:
@@ -2144,14 +2144,11 @@ layers:
 #            draw:
 #                polygons:
 #                    color: orange
-
     buildings:
         data: { source: osm, layer: buildings }
         filter: 
             all:
                 - { $zoom: { min: 16 } }
-                # buildings dont' extrude with label_placement line below
-                # - label_placement: yes
                 - not: { location: underground }
             any:
                 # limit show smaller landuse areas to higher zooms
@@ -2214,122 +2211,37 @@ layers:
             draw:
                 polygons:
                     style: buildings_grid-retail
-
-
-    # buildings-early:
-    #     data: { source: osm, layer: buildings }
-    #     filter: 
-    #         any:
-    #             # limit show smaller landuse areas to higher zooms
-    #             - { $zoom: { min: 12 }, area: { min: 200000 }, name: true }
-    #             - { $zoom: { min: 13 }, area: { min: 100000 }, name: true }
-    #             - { $zoom: { min: 14 }, area: { min: 40000 }, name: true }
-    #             - { $zoom: { min: 15 }, area: { min: 5000 }, name: true }
-    #             - { $zoom: { min: 16 }, area: { min: 1000 }, name: true }
-    #             - { $zoom: { min: 17 }, area: { min: 500 } }
-    #         all:
-    #             - { $zoom: { max: 18 } }
-    #     draw:
-    #         #filter: { not: { location: underground } }
-    #         polygons:
-    #             order: 7
-    #             color: *building2
-    #         outline:
-    #             style: lines
-    #             order: 8
-    #             color: [0.600, 0.600, 0.600]
-    #             width: [[14,0.1px],[16,1px],[18,1.25px]]
-    #             extrude: false
-    
-    # buildings-early-labels:
-    #     data: { source: osm, layer: buildings }
-    #     filter: 
-    #         all:
-    #             - { $zoom: { min: 16 } }
-    #         any:
-    #             # limit show smaller landuse areas to higher zooms
-    #             # - { $zoom: { min: 14 }, area: { min: 40000 }, name: true }
-    #             # - { $zoom: { min: 15 }, area: { min: 5000 }, name: true }
-    #             - { $zoom: { min: 16 }, area: { min: 5000 }, name: true }
-    #             - { $zoom: { min: 17 }, area: { min: 3000 }, name: true }
-    #     draw:
-    #         text:
-    #             interactive: true
-    #             order: 7
-    #             font:
-    #                 fill: '#666'
-    #                 family: Helvetica
-    #                 style: italic
-    #                 size: 12px
-    #                 stroke: { color: *building2, width: 4 }
-
-
-    # buildings-late:
-    #     data: { source: osm, layer: buildings }
-    #     filter: 
-    #         any:
-    #             # limit show smaller landuse areas to higher zooms
-    #             - { $zoom: { min: 14 } }
-    #     draw:
-    #         #filter: { not: { location: underground } }
-    #         polygons:
-    #             order: 50
-    #             color: *building1
-    #         outline:
-    #             style: lines
-    #             order: 51
-    #             color: [0.600, 0.600, 0.600]
-    #             width: [[14,0.1px],[16,1px],[18,1.25px]]
-    #             extrude: true
-    #     extruded:
-    #         filter: { $zoom: { min: 17 } }
-    #         properties:
-    #             building_scale: .25
-    #         draw:
-    #             polygons:
-    #                 style: buildings_grid
-    #                 extrude: |
-    #                     function() { 
-    #                         return [
-    #                             feature.min_height * properties.building_scale,
-    #                             feature.height * properties.building_scale
-    #                         ]; 
-    #                       }
-    #             outline:
-    #                 extrude: |
-    #                     function() { 
-    #                         return [
-    #                             feature.min_height * properties.building_scale,
-    #                             feature.height * properties.building_scale
-    #                         ]; 
-    #                       }
-
-
-                # text:
-                #     filter: 
-                #         any:
-                #             # limit show smaller landuse areas to higher zooms
-                #             # - { $zoom: { min: 14 }, area: { min: 40000 }, name: true }
-                #             # - { $zoom: { min: 15 }, area: { min: 5000 }, name: true }
-                #             - { $zoom: { min: 16 }, area: { min: 10000 }, name: true }
-                #             - { $zoom: { min: 17 }, area: { min: 5000 }, name: true }
-                #         all:
-                #             - { $zoom: { min: 16, max: 18 } }
-                #     interactive: true
-                #     order: 52
-                #     shaders:
-                #         blocks:
-                #             position: |
-                #                 position.y += feature.height * u_meters_per_pixel
-                #     font:
-                #         fill: '#666'
-                #         family: Helvetica
-                #         style: italic
-                #         size: 12px
-
-                #         stroke: { color: *building2, width: 4 }
-
-
+    buildings-labels:
+        data: { source: osm, layer: buildings }
+        filter: 
+            all:
+                - label_placement: yes
+                - { $zoom: { min: 16 } }
+            any:
+                # limit show smaller landuse areas to higher zooms
+                # - { $zoom: { min: 14 }, area: { min: 40000 }, name: true }
+                # - { $zoom: { min: 15 }, area: { min: 5000 }, name: true }
+                - { $zoom: { min: 16 }, area: { min: 5000 }, name: true }
+                - { $zoom: { min: 17 }, area: { min: 3000 }, name: true }
+        draw:
+            text:
+                interactive: true
+                order: 7
+                font:
+                    fill: '#666'
+                    family: Helvetica
+                    style: italic
+                    size: 12px
+                    stroke: { color: *building2, width: 4 }
+        # Hack for no text wrap in Tangram
+        building-labels-z16:
+            filter: function() { if( $zoom == 16 && feature.name.length > 18 ) { return true; } else { return false; } }
+            text:
+                visible: false
+        building-labels-z17:
+            filter: function() { if( $zoom == 17 && feature.name.length > 24 ) { return true; } else { return false; } }
+            text:
+                visible: false
     boundaries:
         data: { source: osm, layer: boundaries }
         # country subdivisions (states, provinces)
