new sports icons added, baseball, basketball, soccer and golf plus industrial

--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -2576,7 +2576,7 @@ layers:
                     filter: { sport: football }
                     draw: { icons: { sprite: football-stadium } }
                 hockey:
-                    filter: { sport: basketball }
+                    filter: { sport: hockey-field }
                     draw: { icons: { sprite: hockey-field } }
                 soccer:
                     filter: { sport: soccer }
